[tool.poetry]
name = "beehive-queen"
version = "0.1.0"
description = ""
authors = ["Mauro de Carvalho"]
readme = "README.md"
packages = [{include = "beehive_queen"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
